# Ancient_PDF-Master

./: .gitignore  README.md  package.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
assets/: app-update.yml  entitlements.mac.plist
electron/main/: auto-updater.js  index.js  preload.js  python-bridge.js
electron/renderer/: index.html  renderer-extensions.js  renderer.js
electron/renderer/styles/: main.css
scripts/: after-pack.js  install-mac.sh  run-dev.sh
src/ancient_pdf_master/: __init__.py  bridge.py  datasets.py  image_handler.py  language.py  ocr_engine.py  page_labels.py  pdf_builder.py  pdf_splitter.py  toc_builder.py  upscale.py  zone_ocr.py
tests/: test_image_handler.py  test_language.py  test_ocr_engine.py  test_page_labels.py  test_page_range.py  test_pdf_splitter.py  test_toc_builder.py  test_upscale.py  test_zone_ocr.py
